Compliance file update
PIA and STRA completed

--- a/COMPLIANCE.yaml
+++ b/COMPLIANCE.yaml
@@ -4,8 +4,8 @@ description: |
   compliance.
 spec:
   - name: PIA
-    status: PIA_STATUS_HERE
-    last-updated: '2021-07-06T18:50:09.747Z'
+    status: Completed
+    last-updated: '2022-02-08T18:50:09.747Z'
   - name: STRA
-    status: STRA_STATUS_HERE
-    last-updated: '2021-07-06T18:50:09.747Z'
+    status: Completed
+    last-updated: '2022-02-08T18:50:09.747Z'
